--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -24,13 +24,50 @@ html, body {
    ======================================================= */
 
 .icone-header {
-    height: 30px;
-    width: 30px;
+    height: 23.5px;
+    width: 23.5px;
+}
+
+#barra-navegacao {
+    color: #707070;
+    background-color: #DADADA;
+}
+#navbarMenu {
+    font-size: 15px;
+}
+.nav-item {
+    margin-left: 42px;
 }
 
 .navbar-brand {
-    text-transform: uppercase;
+    font-size: 27px;
+    color: #707070 !important;
 }
 .nav-item:hover {
     background-color: #bdbdbd;
+}
+
+
+/* =======================================================
+   MISC
+   ======================================================= */
+   
+#form-busca-principal {
+	margin-left: 42px;
+}
+#form-busca-principal i {
+    color: #36923F;
+}
+#busca-principal {
+	width: 275px;
+}
+
+/* Override */
+.navbar.navbar-light form .md-form input:focus:not([readonly]) {
+    border-color: #36923F;
+}
+.md-form input[type=text]:focus:not([readonly]), .md-form input[type=password]:focus:not([readonly]), .md-form input[type=email]:focus:not([readonly]), .md-form input[type=url]:focus:not([readonly]), .md-form input[type=time]:focus:not([readonly]), .md-form input[type=date]:focus:not([readonly]), .md-form input[type=datetime-local]:focus:not([readonly]), .md-form input[type=tel]:focus:not([readonly]), .md-form input[type=number]:focus:not([readonly]), .md-form input[type=search-md]:focus:not([readonly]), .md-form input[type=search]:focus:not([readonly]), .md-form textarea.md-textarea:focus:not([readonly]) {
+    -webkit-box-shadow: 0 1px 0 0 #36923F;
+    box-shadow: 0 1px 0 0 #36923F;
+    border-bottom: 1px solid #36923F;
 }
