--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -31,6 +31,7 @@ html, body {
 #barra-navegacao {
     color: #707070;
     background-color: #DADADA;
+    border-bottom: 5px solid #002776;
 }
 #navbarMenu {
     font-size: 15px;
@@ -70,4 +71,48 @@ html, body {
     -webkit-box-shadow: 0 1px 0 0 #36923F;
     box-shadow: 0 1px 0 0 #36923F;
     border-bottom: 1px solid #36923F;
+}
+
+
+/* =======================================================
+   HERO PRINCIPAL
+   ======================================================= */
+
+#hero-principal {
+    padding-top: 150px;
+    min-height: 100vh;
+
+    /* Imagem */
+    background-image: url(../img/fundos/fundo-lapis.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position-y: -18rem;
+}
+
+.titulo-principal {
+    font-size: 40px;
+}
+.paragrafo-principal {
+    font-size: 17px;
+    opacity: 0.8;
+}
+#hero-principal .container span {
+    font-size: 17px;
+}
+
+#btn-start {
+    border: none;
+    border-radius: 7px;
+    text-align: left;
+    padding: 7px 15px;
+    background-color: #797979;
+    color: white;
+    background-image: url(../img/icones/chevron-right.png);
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+#btn-start:hover {
+    background-color: #9c9c9c;
+    box-shadow: 1px 1px 1px 1px rgb(105, 105, 105);
 }
