--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -50,6 +50,16 @@ html, body {
 
 
 /* =======================================================
+   RODAPÉ
+   ======================================================= */
+
+#footer-principal {
+    background-color: #36923F;
+    color: white;
+}
+
+
+/* =======================================================
    MISC
    ======================================================= */
    
@@ -71,6 +81,12 @@ html, body {
     -webkit-box-shadow: 0 1px 0 0 #36923F;
     box-shadow: 0 1px 0 0 #36923F;
     border-bottom: 1px solid #36923F;
+}
+
+.h1-verde {
+    font-size: 27px;
+    color: #36923F;
+    font-weight: 500;   
 }
 
 
@@ -119,17 +135,12 @@ html, body {
 
 
 /* =======================================================
-   SOBRE
+   SOBRE GERAL
    ======================================================= */
 
 #sobre {
     padding: 7rem !important;
     text-align: center;   
-}
-#sobre h1 {
-    font-size: 27px;
-    color: #36923F;
-    font-weight: 500;
 }
 #sobre p {
     font-size: 17px;
@@ -179,4 +190,19 @@ html, body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+}
+
+
+/* =======================================================
+   SOBRE ESTATÍSTICAS
+   ======================================================= */
+
+#sobre-estatisticas {
+    padding: 7rem !important;
+    background-color: rgb(238, 237, 237);
+    min-height: 100vh;
+    background-image: url(../img/fundos/grafico.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
