--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -43,6 +43,9 @@ html, body {
     position: relative;
     clear: both;
 }
+body {
+    font-size: 95%;
+}
 
 
 /* =======================================================
@@ -331,4 +334,24 @@ button#aplicar-filtros:hover {
 
 .filtros-dependencias .custom-control {
     margin-right: 14px;
+}
+
+/* =======================================================
+   RESULTADO ESCOLAS
+   ======================================================= */
+
+#id-nome {
+    font-weight: bold;
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: top;
+}
+#id-nome:hover {
+    white-space: normal;
+}
+#cartao-escola {
+    border: 1px solid black;
+    padding: 10px 5px;
 }
