- Inicio pagina de estatisticas - Graficos de situacao, dep adm, localizacao e oferta
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -384,3 +384,16 @@ button#aplicar-filtros:hover {
 ul.info {
     list-style-type: none;
 }
+
+
+/* =======================================================
+   GRÁFICOS ESTATÍSTICAS
+   ======================================================= */
+
+.grafico-est {
+    width: 100%;
+    height: 500px;
+}
+#estatisticas-gerais .row {
+    margin-bottom: 50px;
+}
