Criação dos selects do Estado e Escola
Co-authored-by: Bianca Gomes <bgsrd@outlook.com>

--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -156,6 +156,10 @@ body {
     border-color: #36923F transparent transparent transparent !important;
 }
 
+.select2-container {
+    width: 100% !important;
+}
+
 
 /* =======================================================
    RODAPÉ
