--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -151,6 +151,9 @@ body {
 }
 .select2-dropdown {
     font-size: 12px;
+    width: 200px !important;
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15)!important;
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15)!important;
 }
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
     border-color: #36923F transparent transparent transparent !important;
@@ -204,6 +207,13 @@ body {
     color: #fff;
     border-color: var(--azul-escuro) !important;
     background-color: var(--azul-escuro) !important;
+}
+
+table.dataTable thead .sorting:before, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_desc_disabled:before {
+    color: var(--verde-claro);
+}
+table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:after {
+    color: var(--verde-claro);
 }
 
 
@@ -422,4 +432,16 @@ ul.info {
 }
 #estatisticas-gerais .row {
     margin-bottom: 50px;
+}
+
+
+/* =======================================================
+   TABELA DE ESCOLAS
+   ======================================================= */
+
+#tabela-escolas thead tr th {
+    font-weight: bold;
+}
+#tabela-escolas tbody tr.escola {
+    cursor: pointer;
 }
