- Criação da  nova barra de filtros - Mudança da fonte da seção de resultados
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/css/fontes.css
+++ b/Fase 01 - Web (Front End)/css/fontes.css
@@ -24,3 +24,7 @@
        /* font-family: 'Roboto', sans-serif; */
    
    }
+
+   #resultado-busca {
+       font-family: 'Open Sans', sans-serif;
+   }
