--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -7,6 +7,7 @@
     --verde-escuro: #36923F;
     --verde-claro: #88BC3C;
     --azul-escuro: #002776;
+    --cinza: #707070;
     --font-60: 40px;
     --font-40: 27px;
     --font-30: 20px;
@@ -352,27 +353,63 @@ table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, 
     margin-bottom: 1rem;
 }
 
+#secao-filtros {
+    border-bottom: 1px solid black;
+}
+ul.filtros {
+    list-style-type: none;
+}
 
-#filtros {
-    border: 1px solid black;
-    border-radius: 7px;
-    width: 350px;
-    padding: 18px 25px;
+.filtros-dropdown {
+    position: absolute;
+    min-width: 320px;
+    max-width: 360px;
+    padding: 16px;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)!important;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)!important;
+    background: white;
 }
-#filtros p {
-    margin: 10px 0 0 0;
-    padding: 0;
+.filtros-botoes {
+    float: right;
 }
-button#aplicar-filtros {
+.filtros-botoes button {
+    border-radius: 2px;
+    font-weight: 600;
+    padding: 6px 12px;
+}
+.filtros-btn-cancelar {
     border: none;
-    font-size: 20px;
+    background-color: white;
+    color: var(--cinza);
 }
-button#aplicar-filtros:hover {
-    background-color: rgb(108, 148, 48);
+.filtros-btn-aplicar {
+    border: none;
+    background-color: var(--verde-escuro);
+    color: white;
+}
+.filtros-btn-aplicar:hover {
+    background-color: rgb(67, 184, 79);
+}
+.filtros-btn-cancelar:hover {
+    background-color: rgba(207,207,207,.25);
 }
 
-.filtros-dependencias .custom-control {
-    margin-right: 14px;
+.btn-filtro {
+    border: 1px solid var(--cinza);
+    padding: 5px 10px;
+    background-color: white;
+}
+.btn-filtro:hover {
+    background-color: rgba(207,207,207,.25);
+    color: rgba(0,0,0,.75);
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,.75);
+}
+.btn-filtro li-icon {
+    margin-left: 5px;
+}
+.btn-filtro li-icon i {
+    color: var(--verde-claro);
+    size: 110%;
 }
 
 /* =======================================================
