--- a/Fase 01 - Web (Front End)/css/fontes.css
+++ b/Fase 01 - Web (Front End)/css/fontes.css
@@ -2,29 +2,44 @@
    Fontes
    ======================================================= */
 
-   @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
-   @import url('https://fonts.googleapis.com/css?family=Oswald');
-   @import url('https://fonts.googleapis.com/css?family=Merriweather');
-   @import url('https://fonts.googleapis.com/css?family=Lato');
-   @import url('https://fonts.googleapis.com/css?family=Patua+One');
-   @import url('https://fonts.googleapis.com/css?family=Lobster');
-   @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
-   @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
-   @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+    @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+    @import url('https://fonts.googleapis.com/css?family=Oswald');
+    @import url('https://fonts.googleapis.com/css?family=Merriweather');
+    @import url('https://fonts.googleapis.com/css?family=Lato');
+    @import url('https://fonts.googleapis.com/css?family=Patua+One');
+    @import url('https://fonts.googleapis.com/css?family=Lobster');
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
+    @import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
    
    
-   body {
+    body {
    
-       /* font-family: 'Roboto Slab', serif; */
-       /* font-family: 'Oswald', sans-serif; */
-       /* font-family: 'Merriweather', serif; */
-       /* font-family: 'Lato', sans-serif; */
-       /* font-family: 'Open Sans', sans-serif; */
-       font-family: 'Montserrat', sans-serif;
-       /* font-family: 'Roboto', sans-serif; */
-   
-   }
+        /* font-family: 'Roboto Slab', serif; */
+        /* font-family: 'Oswald', sans-serif; */
+        /* font-family: 'Merriweather', serif; */
+        /* font-family: 'Lato', sans-serif; */
+        /* font-family: 'Open Sans', sans-serif; */
+        font-family: 'Montserrat', sans-serif;
+        /* font-family: 'Roboto', sans-serif; */
 
-   #resultado-busca, #secao-filtros {
-       font-family: 'Open Sans', sans-serif;
-   }
+    }
+
+    #resultado-busca, #secao-filtros {
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    #busca {
+        font-family: 'Lato', sans-serif;
+        font-weight: 600;
+    }
+
+    .select2-container--default .select2-results>.select2-results__options {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 600;
+    }
+
+    .select2-container--default .select2-selection--single .select2-selection__placeholder {
+        color: var(--cinza);
+        text-transform: uppercase;
+    }
