--- a/Fase 01 - Web (Front End)/css/educa_brasil.css
+++ b/Fase 01 - Web (Front End)/css/educa_brasil.css
@@ -4,10 +4,14 @@
    ======================================================= */
 
 :root {
+    /* Paleta de Cores */
     --verde-escuro: #36923F;
-    --verde-claro: #88BC3C;
+    --verde-claro: #89DA59;
     --azul-escuro: #002776;
+    --azul-intermediario: #217CA3;
     --cinza: #707070;
+
+    /* Tamanho das fontes de acordo com o protótipo do AdobeXD */
     --font-60: 40px;
     --font-40: 27px;
     --font-30: 20px;
@@ -61,7 +65,7 @@ body {
 #barra-navegacao {
     color: #707070;
     background-color: #DADADA;
-    border-bottom: 5px solid #002776;
+    border-bottom: 5px solid var(--azul-escuro);
 }
 #navbarMenu {
     font-size: 15px;
@@ -158,7 +162,7 @@ body {
     box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15)!important;
 }
 .select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: #36923F transparent transparent transparent !important;
+    border-color: var(--verde-escuro) transparent transparent transparent !important;
 }
 
 .select2-container {
@@ -181,7 +185,7 @@ body {
    ======================================================= */
 
 #footer-principal {
-    background-color: #36923F;
+    background-color: var(--verde-escuro);
     color: white;
     border-top: 5px solid var(--azul-escuro);
 }
@@ -198,7 +202,7 @@ body {
 	margin-left: 42px;
 }
 #form-busca-principal i {
-    color: #36923F;
+    color: var(--verde-escuro);
 }
 #busca-principal {
 	width: 275px;
@@ -206,7 +210,7 @@ body {
 
 .h1-verde {
     font-size: 27px;
-    color: #36923F;
+    color: var(--verde-escuro);
     font-weight: 500;   
 }
 
@@ -217,8 +221,8 @@ body {
 
 .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: var(--azul-escuro) !important;
-    background-color: var(--azul-escuro) !important;
+    border-color: var(--azul-intermediario) !important;
+    background-color: var(--azul-intermediario) !important;
 }
 
 table.dataTable thead .sorting:before, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_desc_disabled:before {
