Nova fonte do "Buscar"
Co-authored-by: Pietro Zuntini <pietrozuntini@gmail.com>

--- a/Fase 01 - Web (Front End)/css/fontes.css
+++ b/Fase 01 - Web (Front End)/css/fontes.css
@@ -43,3 +43,8 @@
         color: var(--cinza);
         text-transform: uppercase;
     }
+
+    .navbar-busca li:first-of-type {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+    }
